Add note on changelog file

--- a/_posts/2025-08-25-1.0.0.md
+++ b/_posts/2025-08-25-1.0.0.md
@@ -17,6 +17,8 @@ For a full list of changes made in this release, please see the [release notes o
 
 You can also view a [full changelog between 0.17.0 and 1.0.0](https://github.com/inventree/InvenTree/compare/0.17.0...1.0.0)
 
+Going forward, we will be tracking major project changes in an internal [CHANGELOG file](https://github.com/inventree/InvenTree/blob/master/CHANGELOG.md) - this file will be updated with each release, and will provide an overview of the major changes made in each version. This file is in addition to the release notes which are provided by GitHub.
+
 ### Update Procedure
 
 To update to the latest version of InvenTree, please follow the updating instructions provided in the [InvenTree documentation](https://docs.inventree.org). Note that the particular update procedure may vary depending on your installation method.
