--- a/_posts/2025-08-25-1.0.0.md
+++ b/_posts/2025-08-25-1.0.0.md
@@ -119,7 +119,7 @@ We have refactored our authentication framework significantly, both to support t
 
 These changes should not affect most users, as we have endeavored to maintain compatibility with existing authentication methods. However, users who have implemented custom authentication mechanisms may need to review their code to ensure compatibility with the new framework.
 
-In particular we have updated our [django-allauth framework](https://github.com/inventree/InvenTree/pull/6293) to align with changes to that library.
+In particular we have updated our usage of [django-allauth framework](https://github.com/inventree/InvenTree/pull/6293) to align with changes to that library. Due to major improvements in upstream allauth we now mostly rely on build-in mechanisms - especially for multi factor.
 
 ### Bulk Update Mixin
 
