--- a/_posts/2025-08-25-1.0.0.md
+++ b/_posts/2025-08-25-1.0.0.md
@@ -158,7 +158,9 @@ Refer to [PR #9574](https://github.com/inventree/InvenTree/pull/9574) for more i
 
 ### Remove django-import-export
 
-In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which is more flexible and easier to use. Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout).
+In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which fits our data modelling better is more flexible and easier to use.
+
+Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout). This enhancement only works with backgroud workers configured, there is a fallback.
 
 ### Stock Return
 
