--- a/_posts/2025-08-25-1.0.0.md
+++ b/_posts/2025-08-25-1.0.0.md
@@ -178,7 +178,7 @@ There are a number of new features and improvements in this release, many of whi
 
 We have made significant performance improvements across the board, particularly in areas such as data loading and rendering. The new UI framework is designed to be more efficient, which should result in a smoother experience for users, especially when dealing with large datasets.
 
-The API has also been optimized to reduce response times and improve overall performance.
+The API has also been optimized to reduce response times and improve overall performance. This is an ongoing effort.
 
 ### Dashboard
 
