--- a/_posts/2025-08-25-1.0.0.md
+++ b/_posts/2025-08-25-1.0.0.md
@@ -196,7 +196,7 @@ We have [reimplemented calendar views](https://github.com/inventree/InvenTree/pu
 
 ### Email Enhancements
 
-[PR #9608](https://github.com/inventree/InvenTree/pull/9608) enhances email support capabilities, including plugin support for sending and receiving emails.
+[PR #9608](https://github.com/inventree/InvenTree/pull/9608) enhances email support capabilities, including plugin support for sending and receiving emails. A number of modern ESP providers can now be used out of the box, support for SMTP continues.
 
 ### Order Start Dates
 
