Add note on user experience survey

--- a/_posts/2025-09-15-1.0.0.md
+++ b/_posts/2025-09-15-1.0.0.md
@@ -23,6 +23,12 @@ Going forward, we will be tracking major project changes in an internal [CHANGEL
 
 To update to the latest version of InvenTree, please follow the updating instructions provided in the [InvenTree documentation](https://docs.inventree.org). Note that the particular update procedure may vary depending on your installation method.
 
+## User Experience Survey
+
+In conjunction with the 1.0.0 release, we have launched a [user experience survey](https://forms.gle/a7mFzqZj57FeS7ds9) to gather feedback from our community. This survey is designed to help us understand how users are utilizing InvenTree, what features they find most valuable, and where we can improve.
+
+The survey is anonymous and should take no more than 10 minutes to complete. We encourage all users to participate, as your feedback is invaluable in shaping the future of InvenTree. Please consider taking the survey and sharing it with others who use InvenTree.
+
 ## Breaking Changes
 
 As with any major release, there are some breaking changes that users should be aware of. These changes may require adjustments to existing installations, plugins, or customizations.
@@ -266,6 +272,8 @@ The following developers made their first contributions to the InvenTree project
 * @RedEchidnaUK made their first contribution in https://github.com/inventree/InvenTree/pull/9400
 * @tristanle22 made their first contribution in https://github.com/inventree/InvenTree/pull/9532
 * @sufyan-mukadam made their first contribution in https://github.com/inventree/InvenTree/pull/9673
+* @the78mole made their first contribution in https://github.com/inventree/InvenTree/pull/10107
+* @daniil4udo made their first contribution in https://github.com/inventree/InvenTree/pull/10179
 
 ### Translation
 
