--- a/_posts/2025-09-15-1.0.0.md
+++ b/_posts/2025-09-15-1.0.0.md
@@ -125,7 +125,7 @@ We have refactored our authentication framework significantly, both to support t
 
 These changes should not affect most users, as we have endeavored to maintain compatibility with existing authentication methods. However, users who have implemented custom authentication mechanisms may need to review their code to ensure compatibility with the new framework.
 
-In particular we have updated our usage of [django-allauth framework](https://github.com/inventree/InvenTree/pull/6293) to align with changes to that library. Due to major improvements in upstream allauth we now mostly rely on build-in mechanisms - especially for multi factor.
+In particular we have updated our [django-allauth framework](https://github.com/inventree/InvenTree/pull/6293) to align with changes to that library.
 
 ### Bulk Update Mixin
 
@@ -164,9 +164,7 @@ Refer to [PR #9574](https://github.com/inventree/InvenTree/pull/9574) for more i
 
 ### Remove django-import-export
 
-In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which fits our data modelling better is more flexible and easier to use.
-
-Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout). This enhancement only works with backgroud workers configured, there is a fallback.
+In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which is more flexible and easier to use. Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout).
 
 ### Stock Return
 
@@ -184,7 +182,7 @@ There are a number of new features and improvements in this release, many of whi
 
 We have made significant performance improvements across the board, particularly in areas such as data loading and rendering. The new UI framework is designed to be more efficient, which should result in a smoother experience for users, especially when dealing with large datasets.
 
-The API has also been optimized to reduce response times and improve overall performance. This is an ongoing effort.
+The API has also been optimized to reduce response times and improve overall performance.
 
 ### Dashboard
 
@@ -202,7 +200,7 @@ We have [reimplemented calendar views](https://github.com/inventree/InvenTree/pu
 
 ### Email Enhancements
 
-[PR #9608](https://github.com/inventree/InvenTree/pull/9608) enhances email support capabilities, including plugin support for sending and receiving emails. A number of modern ESP providers can now be used out of the box, support for SMTP continues.
+[PR #9608](https://github.com/inventree/InvenTree/pull/9608) enhances email support capabilities, including plugin support for sending and receiving emails.
 
 ### Order Start Dates
 
@@ -315,3 +313,5 @@ If your company benefits from InvenTree, please consider a [one time sponsorship
 Our focus over the last year has been on the new user interface, and we are excited to see it finally come to fruition in this release. However, there is still much work to be done, and we have a number of plans for future development.
 
 Check out our [GitHub issues page](https://github.com/inventree/inventree/issues/) for a list of outstanding issues and feature requests. We are always looking for help to improve the project, and we welcome contributions from the community.
+
+You can also help by [completing the user survey](https://forms.gle/a7mFzqZj57FeS7ds9) to provide feedback on your experience with InvenTree, and help us to prioritize future development efforts.
