--- a/_posts/2025-09-15-1.0.0.md
+++ b/_posts/2025-09-15-1.0.0.md
@@ -166,6 +166,8 @@ Refer to [PR #9574](https://github.com/inventree/InvenTree/pull/9574) for more i
 
 In [#8685](https://github.com/inventree/InvenTree/pull/8685) we removed the [django-import-export](https://django-import-export.readthedocs.io/en/latest/) framework, which is what was previously used for data import and export. This has been replaced with a [custom API driven solution](https://github.com/inventree/InvenTree/issues/8686) which is more flexible and easier to use. Our new framework runs in the background worker, allowing for processing of large datasets without blocking the user interface (or causing the web server to timeout).
 
+Our data import and export framework has been completely rewritten, and replaced with a custom API driven solution.
+
 ### Stock Return
 
 The "Stock Return" functionality has been expanded to allow for stock to be returned after having been consumed by a build order. To facilitate this, the API has been refactored to allow for stock returns to be processed more efficiently, and the user interface has been updated to reflect these changes.
@@ -189,10 +191,6 @@ The API has also been optimized to reduce response times and improve overall per
 The new user interface now includes a customizable dashboard that allows users to add, remove, and rearrange widgets according to their preferences. This feature provides a more personalized experience and enables users to focus on the information that is most relevant to them.
 
 This dashboard can be extended with custom widgets provided by plugins, allowing for even greater flexibility and customization.
-
-### Data Import and Export
-
-Our data import and export framework has been completely rewritten, and replaced with a custom API driven solution.
 
 ### Order Calendar Views
 
@@ -225,6 +223,8 @@ This is selected as an option against a particular report template. Note that it
 ### External Build Orders
 
 In [PR #9312](https://github.com/inventree/InvenTree/pull/9312) we introduced support for external build orders, allowing users to manage build orders that are fulfilled by external suppliers. This feature is particularly useful for users who need to manage builds that are outsourced to third-party manufacturers or suppliers.
+
+Refer to the [InvenTree documentation](https://docs.inventree.org/en/latest/manufacturing/external/) for further information.
 
 ### BOM Enhancements
 
