--- a/_posts/2023-06-26-0.12.0.md
+++ b/_posts/2023-06-26-0.12.0.md
@@ -23,7 +23,7 @@ Additionally, part parameters can now also specify real world units!
 
 For more information on this new feature, refer to the documentation:
 
-- [Part units](https://docs.inventree.org/en/stable/part/part/#units-of-measure)
+- [Part units](https://docs.inventree.org/en/stable/part#units-of-measure)
 - [Part parameter units](https://docs.inventree.org/en/stable/part/parameter/#parameter-units)
 
 ### Project Codes
