--- a/_posts/2023-02-06-0.10.0.md
+++ b/_posts/2023-02-06-0.10.0.md
@@ -15,7 +15,7 @@ A lot of work has gone into improving [Single Sign On (SSO)](https://docs.invent
 
 ### Currency Conversion
 
-In a major improvement for currency support, conversion between different currencies is now performed "client side". This means that data tables which contain money values with different currencies can now be added together - and in a computationally efficient manner. Currency exchange rate data is now made available via [the API](https://docs.inventree.org/en/stable/api/api/) - paving the way for future feature development in this area.
+In a major improvement for currency support, conversion between different currencies is now performed "client side". This means that data tables which contain money values with different currencies can now be added together - and in a computationally efficient manner. Currency exchange rate data is now made available via [the API](https://docs.inventree.org/en/stable/api/) - paving the way for future feature development in this area.
 
 ### Pricing Features
 
