--- a/_posts/2024-03-13-docker.md
+++ b/_posts/2024-03-13-docker.md
@@ -242,7 +242,7 @@ Caddy, the proxy server used in the InvenTree Docker setup, automatically config
 
 #### Further Reading
 
-This tutorial is a simple guide to getting InvenTree up and running in a Docker container. For more advanced usage, you should read the [InvenTree Setup Guide](https://docs.inventree.org/en/stable/start/intro/) guide, which provides a lot more detail about the InvenTree Docker setup.
+This tutorial is a simple guide to getting InvenTree up and running in a Docker container. For more advanced usage, you should read the [InvenTree Setup Guide](https://docs.inventree.org/en/stable/start/) guide, which provides a lot more detail about the InvenTree Docker setup.
 
 #### Project Sponsorship
 
