--- a/_posts/2023-04-17-0.11.0.md
+++ b/_posts/2023-04-17-0.11.0.md
@@ -11,7 +11,7 @@ We are thrilled to announce the latest stable release of Inventree, version 0.11
 
 ### Return Orders
 
-The addition of [Return Orders](https://docs.inventree.org/en/stable/order/return_order/) is a significant new feature, which allows users to easily process and manage returned items, whether they are due to customer refunds or defective products. With the ability to track the status of return orders and the associated inventory movements, businesses can better manage their inventory levels, reduce waste, and improve their customer service.
+The addition of [Return Orders](https://docs.inventree.org/en/stable/sales/return_order/) is a significant new feature, which allows users to easily process and manage returned items, whether they are due to customer refunds or defective products. With the ability to track the status of return orders and the associated inventory movements, businesses can better manage their inventory levels, reduce waste, and improve their customer service.
 
 ### Stocktake Reports
 
@@ -25,7 +25,7 @@ The latest release provides improved barcode support, with the ability to genera
 
 InvenTree's latest release includes improved report template functionality with better currency rendering support, enabling businesses to create professional and accurate reports. This feature allows for more detailed and customizable reports, including the ability to display currency symbols and automatically convert currency values to the appropriate format based on the user's settings, saving time and effort.
 
-Refer to the [reporting documentation](https://docs.inventree.org/en/stable/report/report/) for further details.
+Refer to the [reporting documentation](https://docs.inventree.org/en/stable/report) for further details.
 
 ### Search Results
 
