--- a/_posts/2025-11-02-1.1.0.md
+++ b/_posts/2025-11-02-1.1.0.md
@@ -7,7 +7,7 @@ title: 1.1.0 Release
 
 The InvenTree team is excited to announce the release of version 1.1.0.
 
-This is the first major update since our [1.0.0 stable release]({% link _posts/2025-09-15-1.0.0.md }), and includes numerous new features, improvements, and bug fixes to enhance your experience with InvenTree.
+This is the first major update since our [1.0.0 stable release]({% link _posts/2025-09-15-1.0.0.md %}), and includes numerous new features, improvements, and bug fixes to enhance your experience with InvenTree.
 
 ### Changelog
 
