Update release notes for version 1.2.0
Added API changes section and improved clarity on contributing guidelines.

--- a/_posts/2026-02-12-1.2.0.md
+++ b/_posts/2026-02-12-1.2.0.md
@@ -25,6 +25,12 @@ To update to the latest version of InvenTree, please follow the updating instruc
 
 [#10730](https://github.com/inventree/InvenTree/pull/10730) updated the core Django version to 5.2 lts. As part of this update, the minimum required python version has been increased to 3.11.
 
+### API changes
+
+[#11035](https://github.com/inventree/InvenTree/pull/11035) all metadata endpoints were unified into a generic one.
+
+[#11021](https://github.com/inventree/InvenTree/pull/11021) tags were removed from a few APIs by default, they can be enabled using a dedicated filter if need be
+
 ## New Features
 
 ### Generic Parameters
@@ -38,6 +44,8 @@ To update to the latest version of InvenTree, please follow the updating instruc
 ## Bug Fixes
 
 There have been a significant number of [bug fixes](https://github.com/inventree/InvenTree/pulls?q=is%3Apr%20label%3Abug%20is%3Aclosed%20milestone%3A1.2.0) in this release. Thanks to the many community members who have contributed to identifying and resolving these issues!
+
+Some long standing issues with SSO registration settings being enforced too strict have been resolved. User feedback and flow during multifactor-registration enforcement was also improved greatly.
 
 ## Contributing
 
@@ -58,7 +66,7 @@ As always we would like to thank all of our contributors for their hard work and
 
 ### Code Contributions
 
-Check out our GitHub page for a list of outstanding issues and feature requests. If you are a developer, you can help to contribute to the project by submitting a pull request.
+Check out our GitHub page for a list of [outstanding issues](https://github.com/inventree/InvenTree/issues?q=is%3Aissue%20state%3Aopen%20label%3A%22help%20wanted%22) and feature requests. If you are a developer or want to become one, you can help to contribute to the project by submitting a pull request.
 
 ### Translation
 
