remove double header

--- a/_posts/2024-11-07-0.16.8.md
+++ b/_posts/2024-11-07-0.16.8.md
@@ -3,9 +3,9 @@ author: SchrodingersGat
 title: 0.16.8 Release
 ---
 
-## 0.16.8 Release
+We have just released version 0.16.8 which includes a patch for a critical bug in the InvenTree package installer.
 
-We have just released version 0.16.8 which includes a patch for a critical bug in the InvenTree package installer. We recommend that users upgrade to this version as soon as possible.
+We recommend that users upgrade to this version as soon as possible.
 
 ### Missing Translation Files
 
