Fix documentation links for part parameters
Updated links in documentation for part parameter units and part parameters.

--- a/_posts/2023-06-26-0.12.0.md
+++ b/_posts/2023-06-26-0.12.0.md
@@ -24,7 +24,7 @@ Additionally, part parameters can now also specify real world units!
 For more information on this new feature, refer to the documentation:
 
 - [Part units](https://docs.inventree.org/en/stable/part#units-of-measure)
-- [Part parameter units](https://docs.inventree.org/en/stable/part/parameter/#parameter-units)
+- [Part parameter units](https://docs.inventree.org/en/1.1.x/part/parameter/#parameter-units)
 
 ### Project Codes
 
@@ -36,7 +36,7 @@ Read more about project code support [in the documentation](https://docs.inventr
 
 Part parameters in InvenTree now support dynamic typing, empowering you to define and validate various parameter types. With this flexibility, you can customize and validate part parameters to suit your specific needs. Furthermore, the addition of plugin support ensures seamless integration of third-party validation mechanisms, enhancing the reliability of your inventory data.
 
-More information about part parameters is available [in the documentation](https://docs.inventree.org/en/stable/part/parameter/).
+More information about part parameters is available [in the documentation](https://docs.inventree.org/en/1.1.x/part/parameter/).
 
 ### Parameter Sorting
 
