Update release notes for PostgreSQL compatibility
Added a note about PostgreSQL version requirements for 1.2.0 release.

--- a/_posts/2026-02-12-1.2.0.md
+++ b/_posts/2026-02-12-1.2.0.md
@@ -3,7 +3,7 @@ author: SchrodingersGat
 title: 1.2.0 Release
 ---
 
-The InvenTree team is excited to announce the release of version 1.2.0.
+The InvenTree team is excited to announce the release of version 1.2.0. Attention: This release has no support for PostgreSQL 13 - our docs contain information regading [PostgreSQL updates](https://docs.inventree.org/en/latest/start/migrate/#migrating-between-incompatible-database-versions). At least PostgreSQL 14 is required, we recommend PostgreSQL 18.
 
 This release includes numerous new features, improvements, and bug fixes.
 
