[blog] DB update (#260)
* Add blog entry for postgresql database migration

* Update blog entry for 1.2.0

* Tweak post date

* Fix image URL

--- a/_posts/2026-02-12-1.2.0.md
+++ b/_posts/2026-02-12-1.2.0.md
@@ -21,7 +21,16 @@ To update to the latest version of InvenTree, please follow the updating instruc
 
 ### Django Update
 
-[#10730](https://github.com/inventree/InvenTree/pull/10730) updated the core Django version to 5.2 lts. As part of this update, the minimum required python version has been increased to 3.11.
+[#10730](https://github.com/inventree/InvenTree/pull/10730) updated the core Django version to 5.2 lts.
+
+As part of this update, the following breaking changes have been introduced:
+
+#### PostgreSQL 14
+
+The minimum supported version of PostgreSQL has been increased to 14. This means that users running PostgreSQL 13 will need to perform a manual update of their database in order to continue using InvenTree with the latest version. For more information, please refer to our [update guide]({% link _posts/2026-02-12-db-update.md %}) for a walkthrough of the database update procedure.
+
+#### Python 3.11
+The minimum supported python version has been increased to 3.11. This means that users running Python 3.10 or earlier will need to update their python installation in order to run InvenTree 1.2.0.
 
 ### API changes
 
