Tweak blog post

--- a/_posts/2026-02-12-db-update.md
+++ b/_posts/2026-02-12-db-update.md
@@ -51,10 +51,12 @@ First, let's confirm that we are running the expected version of InvenTree (1.1.
 
 ![Old Setup](/assets/blog/db_update_old_versions.png)
 
-To perform the backup, we run the following command:
+To perform the backup, we run the following commands:
 
 ```
+docker compose up inventree-db -d
 docker compose run --rm inventree-server invoke backup
+docker compose down
 ```
 
 This will create a backup of the database and media files in the `data/backup` directory.
@@ -88,8 +90,10 @@ docker compose pull
 Now we can restore the data from the backup we created previously, into the new PostgreSQL 17 database. Run the following commands:
 
 ```
+docker compose up inventree-db -d
 docker compose run --rm inventree-server invoke migrate
 docker compose run --rm inventree-server invoke restore
+docker compose down
 ```
 
 This will restore the database and media files from the backup we created previously.
@@ -109,6 +113,7 @@ docker compose pull
 Next, run the InvenTree update procedure:
 
 ```
+docker compose up inventree-db -d
 docker compose run --rm inventree-server invoke update
 ```
 
