after recent experience concentrate all sponsoring links on a central jump-off point

--- a/_posts/2024-01-13-upcoming.md
+++ b/_posts/2024-01-13-upcoming.md
@@ -65,7 +65,7 @@ Moving forward, we will be tagging specific issues with a *funding* label, which
 
 Funds allocated to a specific issue will be shared between the developers who work on the issue, as well as the maintainers of the InvenTree project.
 
-We are making use of the [polar.sh](https://polar.sh) platform to manage the funding process. Please note that we are not affiliated with polar.sh, we are simply using it as a tool to manage the funding process.
+We are making use of the [polar](/fund#polar) platform to manage the funding process. Please note that we are not affiliated with polar, we are simply using it as a tool to manage the funding process.
 
 We will *not* be asking for funding for every issue, and we will continue to work on issues which are not funded!
 
@@ -87,7 +87,7 @@ The InvenTree development team is very small, and we are always looking for help
 
 ## Sponsor the Project
 
-There are now many businesses (small and large) using InvenTree to support their operations. If you are using InvenTree in your business, please consider [sponsoring the project](https://github.com/sponsors/inventree/). The InvenTree project is maintained by developers in their "spare" time, and financial sponsorship allows us to dedicate more time to the project.
+There are now many businesses (small and large) using InvenTree to support their operations. If you are using InvenTree in your business, please consider [sponsoring the project](/fund.md#github/). The InvenTree project is maintained by developers in their "spare" time, and financial sponsorship allows us to dedicate more time to the project.
 
 You can provide a one-off or monthly sponsorship, or sponsor a specific feature or plugin!
 
