--- a/_posts/2024-08-25-0.16.0.md
+++ b/_posts/2024-08-25-0.16.0.md
@@ -144,8 +144,8 @@ If you or your company uses InvenTree, please consider sponsoring the project to
 
 A friendly reminder that the majority of the work undertaken to keep InvenTree running is done by a very small group of core developers, who do so in their spare time (and are not sponsored by their employers to work on InvenTree). If you benefit from the InvenTree project, please consider contributing to maintain vibrant development of this software!
 
-- [GitHub](https://github.com/sponsors/inventree)
-- [PayPal](https://paypal.me/inventree?locale.x=en_AU) 
+- [GitHub](/fund.md#github)
+- [PayPal](/fund.md#paypal)
 
 ## Deploying InvenTree
 
