--- a/_posts/2025-09-15-1.0.0.md
+++ b/_posts/2025-09-15-1.0.0.md
@@ -299,7 +299,7 @@ Sponsorships help to keep this project sustainable, and buys time for the core d
 
 The work undertaken to keep InvenTree running is done by a very small group of core developers, who do so in their spare time (and are not sponsored by their employers to work on InvenTree). If you benefit from the InvenTree project, please consider contributing to maintain vibrant development of this software!
 
-- [GitHub](/fund.md#github)
+- [GitHub](fund.md#github)
 
 If you are using InvenTree in a commercial setting, please consider sponsoring the project to help support ongoing development and maintenance. Your support is greatly appreciated and helps to ensure that InvenTree remains a viable and sustainable project for years to come.
 
