--- a/_posts/2023-01-02-upcoming.md
+++ b/_posts/2023-01-02-upcoming.md
@@ -89,6 +89,6 @@ Check out the [documentation project](https://github.com/inventree/inventree-doc
 
 The InvenTree project has grown substantially over the last year. While we now have an active user community, we still only have a very small core development team, trying to keep on top of all the great ideas you have.
 
-If you have found InvenTree to be a useful piece of software, especially if you are using it for your business, please consider [sponsoring the project](fund.md#github/). Sponsorship allows the developers to provide more of their (quite precious) time to the project, which benefits everyone.
+If you have found InvenTree to be a useful piece of software, especially if you are using it for your business, please consider [sponsoring the project](/fund#github/). Sponsorship allows the developers to provide more of their (quite precious) time to the project, which benefits everyone.
 
 You can provide a one-off or monthly sponsorship, or sponsor a specific feature or plugin!
