fix link targets (#263)
* fix?

* now fix

* and fix ref target

* fix link

* final broken links

* and now use the correct target

--- a/_posts/2024-01-13-upcoming.md
+++ b/_posts/2024-01-13-upcoming.md
@@ -87,7 +87,7 @@ The InvenTree development team is very small, and we are always looking for help
 
 ## Sponsor the Project
 
-There are now many businesses (small and large) using InvenTree to support their operations. If you are using InvenTree in your business, please consider [sponsoring the project](/fund.md#github/). The InvenTree project is maintained by developers in their "spare" time, and financial sponsorship allows us to dedicate more time to the project.
+There are now many businesses (small and large) using InvenTree to support their operations. If you are using InvenTree in your business, please consider [sponsoring the project](/fund#github-sponsors). The InvenTree project is maintained by developers in their "spare" time, and financial sponsorship allows us to dedicate more time to the project.
 
 You can provide a one-off or monthly sponsorship, or sponsor a specific feature or plugin!
 
