--- a/_posts/2024-12-17-0.17.0.md
+++ b/_posts/2024-12-17-0.17.0.md
@@ -148,4 +148,4 @@ Sponsorships help to keep this project sustainable, and buys time for the core d
 
 The work undertaken to keep InvenTree running is done by a very small group of core developers, who do so in their spare time (and are not sponsored by their employers to work on InvenTree). If you benefit from the InvenTree project, please consider contributing to maintain vibrant development of this software!
 
-- [GitHub](/fund.md#github)
+- [GitHub](/fund#github-sponsors)
